Fixed: Placeholders and input type password

--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
                         <form class="form">
                             <div class="form__container">
                                 <i class="fas fa-user form__container__icon"></i>
-                                <input type="text" value="Username" class="form__container__input-field">
+                                <input type="text" placeholder="Username" class="form__container__input-field">
                             </div>
                             <div class="form__container">
                                 <i class="fas fa-lock form__container__icon"></i>
-                                <input type="text" value="Password" class="form__container__input-field">
+                                <input type="password" placeholder="Password" class="form__container__input-field">
                             </div>
                             <div class="form__container">
                                 <i class="fas fa-lock form__container__icon"></i>
-                                <input type="text" value="Confirm Password" class="form__container__input-field">
+                                <input type="password" placeholder="Confirm Password" class="form__container__input-field">
                             </div>
                             <div class="form__container">
                                 <i class="fas fa-envelope form__container__icon"></i>
-                                <input type="text" value="Email" class="form__container__input-field">
+                                <input type="text" placeholder="Email" class="form__container__input-field">
                             </div>
                             <div class="form__container">
                                 <i class="fas fa-map-marker-alt form__container__icon"></i>
                                 <select name="Location" class="form__container__input-field">
-                                    <option value="your">Your Location</option>
-                                    <option value="katowice">Katowice</option>
-                                    <option value="warszawa">Warszawa</option>
-                                    <option value="gdynia">Gdynia</option>
+                                    <option placeholder="your">Your Location</option>
+                                    <option placeholder="katowice">Katowice</option>
+                                    <option placeholder="warszawa">Warszawa</option>
+                                    <option placeholder="gdynia">Gdynia</option>
                                 </select>
                             </div>
                             <div class="checkbox checkbox-align-left">
@@ -68,14 +68,15 @@
                         <form class="form">
                             <div class="form__container">
                                 <i class="fas fa-user form__container__icon"></i>
-                                <input type="text" value="Your Name" class="form__container__input-field">
+                                <input type="text" placeholder="Your Name" class="form__container__input-field">
                             </div>
                             <div class="form__container">
                                 <i class="fas fa-envelope form__container__icon"></i>
-                                <input type="text" value="Your Email" class="form__container__input-field">
+                                <input type="text" placeholder="Your Email" class="form__container__input-field">
                             </div>
                             <div class="textarea-container">
-                                <textarea class="textarea-container__input form__container__input-field" rows="4" cols="1">Type your message ...  </textarea>
+                                <textarea class="textarea-container__input form__container__input-field" rows="4" cols="1"
+                                    placeholder="Type your message ..."></textarea>
                             </div>
                             <div class="checkbox checkbox-align-left">
                                 <div class="checkbox__rectangle">
@@ -99,11 +100,11 @@
                         <form class="form">
                             <div class="form__container">
                                 <i class="fas fa-user form__container__icon"></i>
-                                <input type="text" value="Username" class="form__container__input-field">
+                                <input type="text" placeholder="Username" class="form__container__input-field">
                             </div>
                             <div class="form__container">
                                 <i class="fas fa-lock form__container__icon"></i>
-                                <input type="text" value="Password" class="form__container__input-field">
+                                <input type="password" placeholder="Password" class="form__container__input-field">
                             </div>
                             <div class="checkbox checkbox-align-right">
                                 <div class="checkbox__rectangle">
@@ -124,11 +125,11 @@
                         <form class="form">
                             <div class="form__container">
                                 <i class="fas fa-envelope form__container__icon"></i>
-                                <input type="text" value="Enter your Email" class="form__container__input-field">
+                                <input type="text" placeholder="Enter your Email" class="form__container__input-field">
                             </div>
                             <div class="form__container">
                                 <i class="fas fa-mobile-alt form__container__icon"></i>
-                                <input type="text" value="Enter your Phone number" class="form__container__input-field">
+                                <input type="text" placeholder="Enter your Phone number" class="form__container__input-field">
                             </div>
                             <div class="checkbox checkbox-align-center">
                                 <button class="button btn-green-small">Send</button>
@@ -145,7 +146,7 @@
                         <form class="form">
                             <div class="form__container">
                                 <i class="fas fa-envelope form__container__icon"></i>
-                                <input type="text" value="Enter your Email" class="form__container__input-field">
+                                <input type="text" placeholder="Enter your Email" class="form__container__input-field">
                             </div>
                             <div class="checkbox checkbox-align-center">
                                 <button class="button btn-green-small">Subscribe</button>
